--- a/KirillToptun-Website/package.json
+++ b/KirillToptun-Website/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.15",
+    "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
