--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@fontsource/poppins": "^5.0.15",
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-pdf": "^9.1.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
